--- a/client/src/pages_css/flashcardPage.css
+++ b/client/src/pages_css/flashcardPage.css
@@ -10,13 +10,20 @@
     align-items: center;
     transform: rotate(90deg);
     height: 55vh;
+    background-color: black;
     width: 100%;
+    color: #8AC26D;
+    padding: 10px;
 }
 .textDiv{
     width: 90%;
     display: grid;
     justify-content: center;
     align-items: center;
+    height: 70%;
+    font-weight: bold;
+    color: #8AC26D;
+    background: black;
 }
 .divButton{
     position: absolute;
@@ -32,4 +39,13 @@
     width: 25%;
     height: 100%;
     background-color: #8AC26D;
+    font-weight: bold;
+    font-size: 15px;
+}
+.iconDiv{
+    width: 5vh;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
