--- a/client/src/pages_css/homePage.css
+++ b/client/src/pages_css/homePage.css
@@ -2,6 +2,10 @@
     height: 25%;
     display: flex;
 }
+.App{
+    height: 92vh !important;
+    padding-top: 8vh !important;
+}
 .deckPhoto{
     height: 80%;
     width: 40%;
