--- a/client/src/components_css/header.css
+++ b/client/src/components_css/header.css
@@ -1,14 +1,15 @@
-.allHeader{
+.allHeader {
     background-color: #8AC26D;
     height: 8vh;
-    position:absolute;
-    left:0;
-    top:0;
-    right:0;
+    position: sticky; /* Alteração para sticky */
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: space-evenly;
 }
-.allHeader div{
+
+.allHeader div {
     width: 25%;
     display: flex;
     align-items: center;
