--- a/client/src/components_css/header.css
+++ b/client/src/components_css/header.css
@@ -26,9 +26,9 @@
     height: 16px;
     background-color: red;
     border-radius: 50%;
-    position: absolute;
-    top: 28px;
-    right: 54px;
+    position: sticky;
+    top: 36px;
+    /* left: 49px; */
     display: flex;
     text-align: center;
     justify-content: center;
