--- a/client/src/pages_css/avaliarCartao.css
+++ b/client/src/pages_css/avaliarCartao.css
@@ -1,74 +1,22 @@
-
-  .botoesDiv {
-    display: flex;
-  }
-  
-  .inputDiv {
-    display: flex;
-    align-items: center;
-  }
-  
-  .avaliaCardDiv{
-    height: 84vh;
-    display: grid;
-    justify-content: center;
-    background-color: #212121;
-    color: var(--primary);
-  }
-
-  .textoDiv{
-    justify-content: center;
-    display: grid;
-    align-items: center;
-  }
-
-  .textoDiv2{
-    justify-content: center;
-    display: grid;
-    align-items: center;
-    height: 44px;
-    margin: 16px;
-  }
-  .botoesDiv{
-    height: 89%;
-    display: grid;
-  }
-  .buttonsComponent{
-    align-items: center;
-    justify-content: space-evenly;
-    display: flex;
-  }
-  .buttonTag{
-    height: 100%;
-    width: 36%;
-    background-color: var(--primary);
-    border: none;
-    font-weight: bold;
-    font-size: 16px;
-    border-radius: 8px;
-  }
-  .inputComponent{
-    display: grid;
-    height: 183px;
-    align-items: center;
-  }
-  .inputComponent input{
-    height: 100%;
-    justify-self: center;
-  }
-  .inputTag{
-    background-color: var(--primary);
-    border: none;
-    border-radius: 8px;
-    width: 80%;
-  }
-  .buttonSend{
-    height: 36%;
-    width: 36%;
-    background-color: var(--primary);
-    border: none;
-    font-weight: bold;
-    font-size: 16px;
-    border-radius: 8px;
-    justify-self: center;
-  }
+.cartaoASerAvaliado{
+  height: 16%;
+  border: solid 1px var(--primary);
+  border-radius: 8px;
+  margin-top: 5px;
+  width: 88%;
+  display: flex;
+  color: white;
+}
+.avaliaCardDiv{
+  height: 84vh;
+  display: flex;
+  justify-content: center;
+  background-color: #212121;
+}
+.direita{
+  border-right: solid 2px var(--primary);
+  margin: 4px;
+}
+.esquerda{
+  margin: 4px;
+}
