--- a/client/src/pages_css/avaliarCartao.css
+++ b/client/src/pages_css/avaliarCartao.css
@@ -10,13 +10,27 @@
 .avaliaCardDiv{
   height: 84vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background-color: #212121;
 }
 .direita{
-  border-right: solid 2px var(--primary);
   margin: 4px;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .esquerda{
+  border-right: solid 2px var(--primary);
   margin: 4px;
+  width: 75%;
 }
+.status{
+  background: red;
+  border-radius: 25px;
+  width: 92%;
+  text-align: center;
+}
+
