--- a/client/src/pages_css/flashcardPage.css
+++ b/client/src/pages_css/flashcardPage.css
@@ -6,14 +6,28 @@
 }
 .cardDiv{
     display: flex;
-    justify-content: center;
+    justify-content: start;
+    flex-direction: column;
     align-items: center;
-    transform: rotate(90deg);
-    height: 55vh;
+    height: 92vh;
     background-color: black;
     width: 100%;
     color: #8AC26D;
-    padding: 10px;
+}
+
+.erroHeader{
+    color:#8AC26D;
+}
+.errorDiv{
+    padding-top: 16px;
+    text-align: center;
+}
+.cardContent{
+    width: 100%;
+    height: 70%;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
 }
 .textDiv{
     width: 90%;
@@ -25,27 +39,41 @@
     color: #8AC26D;
     background: black;
 }
+.flashCardTextDiv{
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 70%;
+    align-items: center;
+    padding: 16px;
+}
 .divButton{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
     height: 7vh;
     display: flex;
     justify-content: center;
+    width: 100%;
+    padding-top: 8px;
 
 }
 .divButton button{
-    width: 25%;
+    width: 100%;
     height: 100%;
     background-color: #8AC26D;
     font-weight: bold;
     font-size: 15px;
+    border: none;
+    border-radius: 8px;
+}
+.errorButton{
+    height: 100%;
+    color: #aa29ed;
+    font-weight: bold;
+    font-size: 15px;
+
 }
 .iconDiv{
     width: 5vh;
-    height: 100%;
     justify-content: center;
     display: flex;
-    align-items: center;
 }
